--- a/src/input.css
+++ b/src/input.css
@@ -1,17 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-h1 {
-    display: none;
-}
-
 #iframe {
     position: absolute;
-    top: 50px;
-    left: 90px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 1400px;
     height: 840px;
     border-radius: 15px;
+    border-width: 0;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    border-width: 0
+}
+
+#bg {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    z-index: -1;
 }
